# AI_251015

./: .gitignore  AGENT.md  ARCHITECTURE.md  README.md  TODO.md  pyproject.toml
backend/: __init__.py  main.py  models.py
backend/services/: __init__.py  document_store.py  rule_engine.py
car_picker/: DESIGN.md  app.py  metadata_loader.py  quiz_engine.py  requirements.txt
common/: __init__.py  doc_parser.py
docs/bulletins/: 2025-09-finance-close.txt
frontend/: app.py
ingestion/: ingest.py
knowledge/: rules.yaml
timer/: index.html  script.js  style.css
